feat(data-management): 添加数据库导入导出功能，并更新相关页面和翻译

--- a/assets/translations/zh.json
+++ b/assets/translations/zh.json
@@ -45,7 +45,7 @@
   "logs_copied": "日志内容已复制",
   "nav_home": "主页",
   "nav_room": "房间",
-  "nav_discover": "发现",
+  "nav_discover": "探索",
   "nav_firewall": "魔法墙",
   "nav_server": "服务器",
   "nav_settings": "设置",
@@ -146,8 +146,8 @@
   "minimize_desc": "是否点击关闭按钮最小化到托盘",
   "player_list_card": "玩家列表卡片",
   "player_list_card_desc": "是否简约显示",
-  "enable_discover_page": "启用发现页面",
-  "enable_discover_page_desc": "在主导航中显示发现页面",
+  "enable_discover_page": "启用探索页面",
+  "enable_discover_page_desc": "在主导航中显示探索页面",
   "enable_banner_carousel": "启用轮播图",
   "enable_banner_carousel_desc": "在主页显示广告轮播图",
   "update_settings": "更新设置",
@@ -207,5 +207,19 @@
   "android_settings": "Android 设置",
   "android_settings_desc": "Android 特定的设置选项",
   "permission_description": "权限说明",
-  "permission_description_desc": "安装权限用于自动更新应用程序"
+  "permission_description_desc": "安装权限用于自动更新应用程序",
+  "data_management": "数据管理",
+  "export_database": "导出配置",
+  "export_database_desc": "导出所有配置数据到文件",
+  "import_database": "导入配置",
+  "import_database_desc": "从文件导入配置数据",
+  "export_success": "导出成功",
+  "export_failed": "导出失败",
+  "import_success": "导入成功",
+  "import_failed": "导入失败",
+  "import_confirm_title": "确认导入",
+  "import_confirm_message": "导入配置将替换当前所有数据，是否继续？",
+  "confirm": "确认",
+  "select_export_path": "选择导出路径",
+  "select_import_file": "选择导入文件"
 }
