feat: add TCP hole punching configuration options
- Added new translation keys for disabling TCP hole punching in English and Chinese.
- Updated server configuration builder to include TCP hole punching settings.
- Implemented methods to update and retrieve TCP hole punching settings in the network configuration repository.
- Modified the network configuration model to include TCP hole punching properties.
- Updated the network settings page to allow users to toggle TCP hole punching.
- Adjusted Rust API and generated files to accommodate the new TCP hole punching flag.

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -118,6 +118,8 @@
   "relay_peer_rpc_desc": "Whether to relay all peer RPC",
   "disable_udp_hole_punching": "Disable UDP Hole Punching",
   "disable_udp_hole_punching_desc": "Whether to disable UDP hole punching",
+  "disable_tcp_hole_punching": "Disable TCP Hole Punching",
+  "disable_tcp_hole_punching_desc": "Disable IPv4 TCP direct connection",
   "enable_multi_thread": "Enable Multi-threading",
   "enable_multi_thread_desc": "Whether to enable multi-threading",
   "compression_algorithm": "Compression Algorithm",
